# axa

./: BUILD.gn  README.md
client/: AndroidManifest.xml  BUILD.gn  native_bridge.cc
client/res/layout/: activity_main.xml
client/src/org/chromium/axa_client/: MainActivity.java  NativeBridge.java
mojom/: BUILD.gn  mini_chrome.mojom
service/: AndroidManifest.xml  BUILD.gn  mini_chrome.cc  mini_chrome.h  native_bridge.cc  native_bridge.h
service/src/org/chromium/axa_service/: Listener.java  NativeBridge.java  Notifier.java
